--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,5 +21,10 @@ pipeline {
                 sh './jenkins/scripts/deliver.sh'
             }
         }
+        stage('Completion') {
+            steps {
+                sh 'echo How are you'
+            }
+        }
     }
 }
