--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,5 +26,10 @@ pipeline {
                 echo 'Wazaaaap'
             }
         }
+        stage('Clean up') {
+            steps {
+                echo 'Cleanin up'
+            }
+        }
     }
 }
